compat: support Minecraft 1.16.5 through the newest release
Built against the 1.16.5 API and compiled to Java 11 bytecode, so one jar now
covers every version from 1.16.5 onwards instead of 1.20.6+.

Checking the old API first turned out to matter: getTileEntities(boolean),
getTPS(), getAverageTickTime() and even the plugin.yml `libraries` entry all
exist in 1.16.5, so nothing had to be given up - SQLite storage still works
there. Every one of the 16 compile errors was language syntax, not missing API.

What changed to reach Java 11: six records became plain immutable classes,
four switch expressions and one text block went back to the classic forms,
pattern-matching instanceof got an explicit cast, and Stream.toList() became
collect(toList()). Test sources still compile at 21 - they never ship.

Java 11 rather than 8 keeps java.net.http and the collection factories, and
only excludes 1.16 servers still running Java 8, which Paper advises against
anyway. From 1.17 the requirement is moot, since Minecraft itself demands 16+.

Verified end to end on Paper 1.21.10: commands, spark, SQLite and the panel all
behave the same as before the downgrade. Jar confirmed at bytecode 55.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01AXtt9yZZKYg1Ndkp9NQJd4